<resources>
    <string name="app_name">Shopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--     Home Activity-->

    <string name="shopping_card">shopping card</string>


    <!--    Menu Navigation Bar Home-->
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="home">Home</string>


    <!--    category item-->
    <string name="category_name">Category List</string>


    <!--    home fragment-->
    <string name="txtAmazingOfferTime">زمان باقی مانده تا پایان پیشنهاد شگفت انگیز:</string>
    <string name="txtAmazingOfferMore">ادامه محصولات پیشنهاد شگفت انگیز: </string>


    <!--   tem 0 amazing offers HomeFragment -->
    <string name="imgAmazingGoods">تصویر کالا</string>
    <string name="moreNewest"><![CDATA[ادامه جدیدترین ها >]]></string>
    <string name="newProducts_homeFragment">جدیدترین محصولات</string>
    <string name="all_new_product"><![CDATA[نمایش همه >]]></string>
    <string name="moreBrand"><![CDATA[نمایش همه>]]></string>
    <string name="brand">برندها</string>


    <!--    show detail product activity-->
    <string name="product_name">Product Name</string>
    <string name="product_brand">Product Brand</string>
    <string name="your_award">Your Award !</string>
    <string name="_25_score">25 Score</string>
    <string name="properties">Properties</string>
    <string name="product_introduction">Product Introduction</string>
    <string name="product_properties">Product Properties</string>
    <string name="chart_price">Chart Price</string>
    <string name="comparable_products">Comparable Products</string>
    <string name="product_compare">Product Compare</string>
    <string name="profile_en">Profile</string>

    /// login register
    <string name="swipe_right_for_register">Swipe Right for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nShop Everything You Want</string>
    <string name="swipe_left_for_login">Swipe Left for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="forgot_your_password">Forgot your Password ?</string>

    ///////////////
    <string name="pref_file">preference_file</string>
    <string name="pref_login_status">preference_login_status</string>
    <string name="pref_user_name">preference_user_name</string>
    <string name="username">Username</string>
    <string name="register_form">Register Form</string>


</resources>

