<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_bottomNavigationMenu"
        android:icon="@drawable/home"
        android:enabled="true"
        android:title="@string/home"
        app:showAsAction="always|withText"
        />
    <item
          android:id="@+id/search_bottomNavigationMenu"
          android:icon="@drawable/search"
          android:enabled="true"
          android:title="@string/search"
          app:showAsAction="always|withText"
          />
      <item
          android:id="@+id/profile_bottomNavigationMenu"
          android:icon="@drawable/profile"
          android:enabled="true"
          android:title="@string/profile"
          app:showAsAction="always|withText"
          />
      <item
          android:id="@+id/category_bottomNavigationMenu"
          android:enabled="true"
          android:icon="@drawable/category"
          android:title="@string/category"
          app:showAsAction="always|withText"
          />

</menu>
