<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >

    <TextView
        android:id="@+id/tv_title_loginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="@font/indigo_daisy"
        android:textColor="@color/colorWUAPink"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/tv_subtitle_loginActivity"/>

    <TextView
        android:id="@+id/tv_subtitle_loginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorWUAPink"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/et_email_loginActivity"/>

    <EditText
        android:id="@+id/et_email_loginActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto_regular"
        android:layout_above="@id/et_password_loginActivity"
        android:background="@drawable/et_custom"
        android:textColor="@color/colorWUAPink"
        android:hint="@string/e_mail"
        android:textColorHint="@color/colorWUAPink"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password_loginActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorWUAPink"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textColorHint="@color/colorWUAPink"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_login_loginActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_password_loginActivity"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorWhite"
        android:text="@string/login"/>

    <TextView
         android:id="@+id/txt_forgotPassword_loginActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/txt_login_loginActivity"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:textSize="12sp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/colorWUAPinkDark"
         android:text="@string/forgot_your_password"/>

    <LinearLayout
        android:id="@+id/LLSwipeRight_loginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        >
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_gravity="center"
        app:tint="@color/colorWUAPinkDark" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_right_for_register"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorWUAPinkDark"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    </LinearLayout>

</RelativeLayout>
