<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".Activity.ShowDetailProductActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPinkDark"
        android:layoutDirection="ltr">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_showDetailActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/back_showDetailActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:srcCompat="@drawable/clear"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">

            <ImageView
                android:id="@+id/shoppingCard_showDetailActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/shopping_cart"
                android:padding="8dp"
                android:contentDescription="@string/shopping_card"
                />
            <ImageView
                android:id="@+id/favorite_showDetailActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:srcCompat="@drawable/favorite"
                />
                <ImageView
                    android:id="@+id/more_showDetailActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/more"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
        android:layout_below="@id/appbarLayout"
           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_showDetailProductActivity"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
    />

   <com.google.android.material.tabs.TabLayout
       android:id="@+id/tabLayout_showDetailProductActivity"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/viewPager_showDetailProductActivity"
       android:layout_centerHorizontal="true"
       android:background="@color/colorBackground"
       app:tabBackground="@drawable/bg_tabs_circle"
       app:tabIndicator="@color/colorBackground"
       app:tabGravity="center"
       app:tabIndicatorHeight="0dp"
       />

       <TextView
        android:id="@+id/productName_showDetailProductActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextColor"
        android:text="@string/product_name"
        android:layout_below="@id/tabLayout_showDetailProductActivity"
        android:layout_marginTop="16dp"
           android:layout_marginLeft="8dp"
           android:layout_marginRight="8dp"
           android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:textStyle="bold"
        />

       <TextView
         android:id="@+id/productBrand_showDetailProductActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextColor"
         android:text="@string/product_brand"
         android:layout_below="@id/productName_showDetailProductActivity"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
           android:maxLines="1"
         android:textStyle="bold"
         />


               <androidx.cardview.widget.CardView
                   android:id="@+id/Xcard"
                   android:layout_width="match_parent"
                   android:layout_height="90dp"
                   android:layout_below="@id/productBrand_showDetailProductActivity"
                   android:layout_margin="16dp"
                   android:elevation="8dp"
                   app:cardCornerRadius="16dp"
                   android:background="@color/colorPrimaryDark"
                   android:backgroundTint="@color/colorPrimaryDark"
                   >
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_margin="8dp">
                       <TextView
                           android:id="@+id/XtxtScore"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/your_award"
                            android:textColor="@color/colorBackground"
                           android:padding="8dp"/>
                       <ImageView
                           android:id="@+id/Ximg"
                           android:layout_width="24dp"
                           android:layout_height="24dp"
                           android:layout_below="@id/XtxtScore"
                           android:src="@drawable/money_bag"
                           android:layout_margin="8dp"/>
                       <TextView
                          android:id="@+id/earnScore_showDetailActivity"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/_25_score"
                           android:layout_marginTop="4dp"
                           android:textColor="@color/colorBackground"
                           android:layout_below="@id/XtxtScore"
                           android:layout_toRightOf="@id/Ximg"
                          android:padding="8dp"/>

                   </RelativeLayout>
               </androidx.cardview.widget.CardView>


               <TextView
                 android:id="@+id/XtxtSimilar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Similar Products : "
                  android:layout_marginTop="4dp"
                  android:textColor="@color/colorTextColor"
                  android:layout_below="@id/Xcard"
                 android:padding="8dp"/>

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/similarProductRecyclerView_showDetailActivity"
                   android:layout_width="match_parent"
                   android:layout_height="350dp"
                   android:layout_below="@id/XtxtSimilar"
                   android:paddingTop="16dp"
                   android:paddingBottom="16dp"
                   android:layout_marginTop="8dp"
                    android:background="@color/colorBlue"
                    android:layout_marginBottom="16dp"
                   />

               <TextView
                    android:id="@+id/XtxtProductOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Product Options : "
                     android:layout_marginTop="4dp"
                     android:textColor="@color/colorTextColor"
                     android:layout_below="@id/similarProductRecyclerView_showDetailActivity"
                    android:padding="8dp"/>

               <androidx.recyclerview.widget.RecyclerView
                      android:id="@+id/productOptionsRecyclerView_showDetailActivity"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/XtxtProductOption"
                      android:paddingTop="16dp"
                      android:paddingBottom="16dp"
                      android:layout_marginTop="8dp"
                       android:background="@color/colorBackground"
                       android:layout_marginBottom="16dp"
                      />

               <View
                   android:id="@+id/Xview1"
                   android:layout_width="match_parent"
                   android:layout_height=".75dp"
                   android:background="@color/colorTextColor_gray"
                   android:layout_below="@id/productOptionsRecyclerView_showDetailActivity"
                   />

               <RelativeLayout
                   android:id="@+id/relativeProperties_showDetailActivity"
                   android:layout_width="match_parent"
                   android:layout_height="70dp"
                   android:layout_below="@id/Xview1"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/properties"
                       android:textColor="@color/colorTextColor"
                       android:layout_margin="8dp"
                       android:layout_alignParentStart="true"
                       android:layout_centerVertical="true"
                       />
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentEnd="true"
                       android:layout_centerVertical="true"
                       android:layout_marginEnd="8dp"
                       android:padding="8dp"
                       android:src="@drawable/arrow_forward"
                       />
               </RelativeLayout>

               <View
                   android:id="@+id/Xview2"
                   android:layout_width="match_parent"
                   android:layout_height=".75dp"
                   android:background="@color/colorTextColor_gray"
                   android:layout_below="@id/relativeProperties_showDetailActivity"
                   />

               <RelativeLayout
                   android:id="@+id/relativeProductPresentation_showDetailActivity"
                   android:layout_width="match_parent"
                   android:layout_height="70dp"
                   android:layout_below="@id/Xview2"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/product_introduction"
                       android:textColor="@color/colorTextColor"
                       android:layout_margin="8dp"
                       android:layout_alignParentStart="true"
                       android:layout_centerVertical="true"
                       />
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentEnd="true"
                       android:layout_centerVertical="true"
                       android:layout_marginEnd="8dp"
                       android:padding="8dp"
                       android:src="@drawable/arrow_forward"
                       />

                   
               </RelativeLayout>



           </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rightToLeft_showDetailActivity"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorBackground"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/plusToShop_showDetailActivity"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_sell_btn"
            android:text="Add"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:textSize="18sp"

            android:padding="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/plusToShop_showDetailActivity"

            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"

            app:initialNumber="1"
            app:finalNumber="100"

            app:backGroundColor="@color/colorRed"
            app:textColor="@color/colorText"
            />

        <TextView
            android:id="@+id/offPercentage_showDetailProduct"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="20%"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"

            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"

            android:background="@drawable/bg_offers_percentage"

            />

        <TextView
            android:id="@+id/offPrice_showDetailProduct"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="1278000 $"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"

            android:layout_toStartOf="@id/offPercentage_showDetailProduct"

            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"

            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"

            />

        <TextView
            android:id="@+id/realPrice_showDetailProduct"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="1278000 $"
            android:textStyle="bold"
            android:textColor="@color/colorTextColor"

            android:layout_below="@id/offPercentage_showDetailProduct"
            android:layout_alignParentEnd="true"

            android:layout_marginEnd="8dp"

            android:paddingEnd="8dp"
            android:paddingStart="8dp"


            />

    </RelativeLayout>

</RelativeLayout>
